done styling the page firebase stil not working

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         </div>
     </div>
 </body>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js" integrity="sha256-1hjUhpc44NwiNg8OwMu2QzJXhD8kcj+sJA3aCQZoUjg=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/ca.js" integrity="sha256-NPnuFvS1oYkm3cZVq776l59xkaYkS+8ZRfK7uwbd70g=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
 </script>
 <link rel="stylesheet" href="assets/style/style.css">
