--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Train Scheduler</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/slate/bootstrap.min.css" rel="stylesheet" integrity="sha384-RpX8okQqCyUNG7PlOYNybyJXYTtGQH+7rIKiVvg1DLg6jahLEk47VvpUyS+E2/uJ" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style/style.css">
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-database.js"></script>
 </head>
 
 <body>
@@ -60,11 +62,11 @@
                                     </div>
                                     <div class="form-group">
                                         <label>First Train Time: HH:mm - military time</label>
-                                        <input type="text" class="form-control form-field" id="first-train">
+                                        <input type="time" class="form-control form-field" id="first-train">
                                     </div>
                                     <div class="form-group">
                                         <label>Frequency (min)</label>
-                                        <input type="text" class="form-control form-field" id="frequency">
+                                        <input type="number" min="0" class="form-control form-field" id="frequency">
                                     </div>
 
                                     <button type="submit" class="btn btn-default" id="submit">Add Train</button>
@@ -81,9 +83,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js" integrity="sha256-1hjUhpc44NwiNg8OwMu2QzJXhD8kcj+sJA3aCQZoUjg=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
 </script>
-<script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-database.js"></script>
-
 <script src="./assets/jscript/app.js"></script>
 
 </html>
